			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

08-Mar-2001
~~~~~~~~~~~
New pinboards get a 'Home' icon in the top left corner (new users often
think the pinboard isn't working because it starts empty).

06-Mar-2001
~~~~~~~~~~~
Highlight invalid Find expressions in red (Anders Lundmark).

04-Mar-2001
~~~~~~~~~~~
When resizing windows, try to keep the window fully inside the screen area
(Denis Manente).

03-Mar-2001
~~~~~~~~~~~
Updated the Dutch translation (Jan Wagemakers).

27-Feb-2001
~~~~~~~~~~~
When mounting a device, the new window appears after mounting, not before.
This means that it's more likely to get sized correctly (requested by
Ewan Mac Mahon).

24-Feb-2001
~~~~~~~~~~~
Added two new options to control when minibuffer completion beeps (requested
by Liav Asseraf).

20-Feb-2001
~~~~~~~~~~~
Added 'New File...' feature (James Kermode).

16-Feb-2001
~~~~~~~~~~~
Dropping icons on the pinboard positions them sensibly (Diego Zamboni).

09-Feb-2001 (Release 1.1.1)
~~~~~~~~~~~
Moving pinboard icons is nicer - it no longer assumes you dragged the middle
of the text... (Diego Zamboni).

Added a Polish translation (Andrzej Borsuk).

Bugfix: Sometimes it wasn't possible to delete something that was on a
	pinboard or panel, even after confirming (reported by Diego Zamboni).

07-Feb-2001
~~~~~~~~~~~
Sliders in the options box can have a numerical value display (Diego Zamboni).
Fixed a stray warning message displayed when non-default pinboard options
were used (Diego Zamboni).

New menu item 'Set Icon...' allows you to choose any icon for any file or
directory. Also allow .DirIcon.png to set a directory's icon (Diego Zamboni).

03-Feb-2001
~~~~~~~~~~~
Many internal changes to the Options system.

30-Jan-2001
~~~~~~~~~~~
Bugfix: On filesystems which aren't case sensitive (eg DOS) it was possible
	to copy 'tmp' as 'Tmp' and lose it! (reported by Denis Manente)

28-Jan-2001
~~~~~~~~~~~
Added Diego Zamboni's patch to make configuring VFS easier.
