@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<AppMenu>
+  <Item label="Enable pinboard" option="-p=Default"/>
+  <Item label="Disable pinboard" option="-p="/>
+</AppMenu>
