@@ -7,6 +7,9 @@
 New pinboards get a 'Home' icon in the top left corner (new users often
 think the pinboard isn't working because it starts empty).
 
+Converted AppMenu file format to XML.
+Added AppMenu file with options to control the pinboard.
+
 06-Mar-2001
 ~~~~~~~~~~~
 Highlight invalid Find expressions in red (Anders Lundmark).
